# serialize

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  shell.nix
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  serialize.cpp  serialize.hpp
